--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=”en”>
 	<head>
-		<title></title>
+		<title>Weather Data Collection</title>
 	</head>
 	<meta charset="UTF-8">
 	  
